# prime_chen_jieyuan

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prime_jc6102/: __init__.py  prime_jc6102.py
tests/: test_prime_jc6102.py
