[tool.poetry]
name = "prime_jc6102"
version = "0.1.0"
description = "Jieyuan Chen's package"
authors = ["Jieyuan Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
