[tool.poetry]
name = "prime_jc6102"
version = "0.1.0"
description = "Jieyuan Chen's package"
authors = ["Jieyuan Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
sphinx-autoapi = "^2.0.0"
myst-nb = "^1.0.0rc0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
